<resources>
    <string name="app_name">Dispatch</string>
    <string name="tab_operation">作业控制</string>
    <string name="tab_dispatch">调度指挥</string>
    <string name="tab_control">现场记录</string>
    <string name="tab_location">广播控制</string>
    <string name="tab_monitor">视频监控</string>
    <string name="duty_officer">当班人员</string>
    <string name="handover_record">交班记录</string>
    <string name="up">始发车</string>
    <string name="down">终到车</string>
    <string name="reminders">提醒事项</string>
    <string name="add_reminder">添加提醒事项</string>
    <string name="operation_from">始发、经过车作业</string>
    <string name="operation_to">终到车作业</string>
    <string name="operation_reminders">提醒事项</string>
    <string name="operation_add_reminder">添加提醒事项</string>
    <string name="current_station">当前车站:</string>
    <string name="today">当日:2016年5月6日</string>
    <string name="tomorrow">下一日:2016年5月7日</string>
    <string name="add">添加</string>
    <string name="done">已完成</string>
    <string name="unDone">未完成</string>
    <string name="time_out">已超时</string>
    <string name="delete">删除</string>
    <string name="reminder_time">提醒时间:</string>
    <string name="reminder_content">提醒内容:</string>
    <string name="save">保存</string>
    <string name="give_up">放弃</string>
    <string name="reminder_hint">点击这里编辑事件描述</string>
    <string name="location">人员定位</string>
    <string name="display_by_user">按用户显示</string>
    <string name="display_by_area">按区域显示</string>
    <string name="order">命令</string>
    <string name="station">站台</string>
    <string name="police">公安</string>
    <string name="on_time">准时</string>
    <string name="late">晚点</string>
    <string name="shut_down">停运</string>
    <string name="late_undetermined">晚点未定</string>
    <string name="request_data_fail">获取数据失败</string>
    <string name="delete_fail">删除失败</string>
    <string name="change_password">修改密码</string>
    <string name="quondam_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="new_password_hint">6-12个字符</string>
    <string name="confirm_password_hint">与新密码保持一致</string>
    <string name="confirm_change">确认修改</string>
    <string name="confirm">确定</string>
</resources>
