<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF4"
    android:orientation="vertical">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/change_password" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFF"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quondam_password"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_quondam_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/quondam_password"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFF"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_password"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/new_password_hint"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="#FFF"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_password"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/confirm_password_hint"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#A4CFFC"
                android:text="@string/confirm_change" />
        </LinearLayout>

        <com.winsion.dispatch.view.InterceptEventLinearLayout
            android:id="@+id/iell_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.winsion.dispatch.view.InterceptEventLinearLayout>
    </FrameLayout>
</LinearLayout>